createEvent/initEvent screw up creating right-click or middle-click events. Bug 254795, r+sr=jst